# glimepiride-app

./: .gitignore  Dockerfile  README.md  deploy.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
nginx/: glimepiride.de
src/: app.py
src/layouts/: app.grid.json  glimepiride_app.grid.json
